feat: add controller to get content-format enum
