# swagger-bundled.yaml
@@ -2,9 +2,9 @@ openapi: 3.1.0
 info:
   title: Content Flow API
   version: 1.0.0
-  description: "Content Flow API Documentation [Download specification file (YAML)](/api/swagger-bundled.yaml)"
+  description: 'Content Flow API Documentation [Download specification file (YAML)](/api/swagger-bundled.yaml)'
 servers:
-  - url: "http://localhost:3000/api"
+  - url: 'http://localhost:3000/api'
 components:
   securitySchemes:
     bearerAuth:
@@ -24,6 +24,8 @@ tags:
     description: Endpoints related to plans
   - name: Subscription
     description: Endpoints related to subscriptions
+  - name: Content
+    description: Endpoints related to contents generated by AI
 paths:
   /login:
     post:
@@ -41,11 +43,11 @@ paths:
                   type: string
                 password:
                   type: string
-          example:
-            email: Teste@example.com
-            password: string
+              example:
+                email: Teste@example.com
+                password: string
       responses:
-        "200":
+        '200':
           content:
             application/json:
               schema:
@@ -53,10 +55,11 @@ paths:
                 properties:
                   success:
                     type: boolean
-                    default: true
                   message:
                     type: string
-                    default: Login successful
+                example:
+                  success: true
+                  message: Login successful
                   data:
                     type: object
                     properties:
@@ -65,7 +68,7 @@ paths:
                       refreshToken:
                         type: string
           description: Login successful
-        "401":
+        '401':
           description: Invalid password
           content:
             application/json:
@@ -74,11 +77,12 @@ paths:
                 properties:
                   success:
                     type: boolean
-                    default: false
                   message:
                     type: string
-                    default: Invalid password
-        "404":
+                example:
+                  success: false
+                  message: Invalid password
+        '404':
           description: User not found
           content:
             application/json:
@@ -87,10 +91,10 @@ paths:
                 properties:
                   success:
                     type: boolean
-                    default: false
                   message:
                     type: string
-                    default: User not found
+                example:
+                  success: false
   /register:
     post:
       tags:
@@ -118,7 +122,7 @@ paths:
                   type: string
                   default: local
       responses:
-        "201":
+        '201':
           content:
             application/json:
               schema:
@@ -131,7 +135,7 @@ paths:
                     type: string
                     default: User created successfully
           description: User created successfully
-        "400":
+        '400':
           content:
             application/json:
               schema:
@@ -159,7 +163,7 @@ paths:
                 refreshToken:
                   type: string
       responses:
-        "200":
+        '200':
           description: Token refreshed successfully
           content:
             application/json:
@@ -178,7 +182,7 @@ paths:
                         type: string
                       refreshToken:
                         type: string
-        "401":
+        '401':
           description: Invalid refresh token
           content:
             application/json:
@@ -196,7 +200,7 @@ paths:
         - Plans
       summary: Retrieve all available plans
       responses:
-        "200":
+        '200':
           content:
             application/json:
               schema:
@@ -264,7 +268,7 @@ paths:
                   type: string
                   description: ID of the user
       responses:
-        "200":
+        '200':
           description: Successful operation
           content:
             application/json:
@@ -280,7 +284,7 @@ paths:
                       checkoutUrl:
                         type: string
                         description: URL to redirect the user to for payment
-        "404":
+        '404':
           description: User not found
           content:
             application/json:
@@ -293,7 +297,7 @@ paths:
                   message:
                     type: string
                     description: User not found
-        "500":
+        '500':
           description: Internal Server Error
           content:
             application/json:
@@ -349,7 +353,7 @@ paths:
                   description: Stripe payment method ID (credit card)
                   example: pm_card_visa
       responses:
-        "201":
+        '201':
           description: Subscription created successfully
           content:
             application/json:
@@ -371,7 +375,7 @@ paths:
                         description: Client secret for payment confirmation (can be null)
                         example: pi_1234567890abcdef_secret_1234567890abcdef
                         nullable: true
-        "400":
+        '400':
           description: Invalid priceId provided
           content:
             application/json:
@@ -384,7 +388,7 @@ paths:
                   message:
                     type: string
                     example: Invalid priceId provided
-        "403":
+        '403':
           description: User already has an active or pending subscription
           content:
             application/json:
@@ -410,7 +414,7 @@ paths:
                   value:
                     success: false
                     message: You have a pending subscription. Please wait for it to be processed.
-        "404":
+        '404':
           description: User not found
           content:
             application/json:
@@ -423,7 +427,7 @@ paths:
                   message:
                     type: string
                     example: User not found
-        "500":
+        '500':
           description: Internal server error (Stripe or other service issues)
           content:
             application/json:
@@ -461,7 +465,7 @@ paths:
                   description: ID of the user canceling the subscription
                   example: 01234567-89ab-cdef-0123-456789abcdef
       responses:
-        "200":
+        '200':
           description: Subscription canceled successfully
           content:
             application/json:
@@ -474,7 +478,7 @@ paths:
                   message:
                     type: string
                   default: Subscription canceled
-        "400":
+        '400':
           description: Subscription is not active
           content:
             application/json:
@@ -487,7 +491,7 @@ paths:
                   message:
                     type: string
                     default: Subscription is not active
-        "401":
+        '401':
           description: The user is not authenticated
           content:
             application/json:
@@ -500,7 +504,7 @@ paths:
                   message:
                     type: string
                     default: No token provided
-        "404":
+        '404':
           description: Subscription not found
           content:
             application/json:
@@ -513,7 +517,7 @@ paths:
                   message:
                     type: string
                     default: Subscription not found
-        "500":
+        '500':
           description: Internal server error
           content:
             application/json:
@@ -532,7 +536,7 @@ paths:
         - Google OAuth
       summary: Create a google url authentication
       responses:
-        "200":
+        '200':
           description: Create a google url authentication successfully
           headers:
             Set-Cookie:
@@ -557,8 +561,8 @@ paths:
                       url:
                         type: string
                         description: Google OAuth authentication URL
-                        example: "https://accounts.google.com/o/oauth2/v2/auth?client_id=..."
-        "500":
+                        example: 'https://accounts.google.com/o/oauth2/v2/auth?client_id=...'
+        '500':
           description: Internal server error
           content:
             application/json:
@@ -595,7 +599,7 @@ paths:
                   type: string
                   default: nonce123
       responses:
-        "200":
+        '200':
           description: Login with Google OAuth successful
           content:
             application/json:
@@ -612,7 +616,7 @@ paths:
                         type: string
                       refreshToken:
                         type: string
-        "500":
+        '500':
           description: Internal Server Error
           content:
             application/json:
@@ -642,7 +646,7 @@ paths:
                   description: The email address of the user requesting password recovery
       description: This endpoint allows users to initiate the password recovery process by providing their email address.
       responses:
-        "200":
+        '200':
           description: Password recovery email sent successfully
           content:
             application/json:
@@ -655,7 +659,7 @@ paths:
                   message:
                     type: string
                     example: Password recovery email sent successfully
-        "404":
+        '404':
           description: User not found
           content:
             application/json:
@@ -668,7 +672,7 @@ paths:
                   message:
                     type: string
                     example: User not found
-        "500":
+        '500':
           description: Internal server error
           content:
             application/json:
@@ -699,7 +703,7 @@ paths:
                   type: string
                   description: The new password for the user
       responses:
-        "204":
+        '204':
           description: Success
           content:
             application/json:
@@ -709,7 +713,7 @@ paths:
                   success:
                     type: boolean
                     example: true
-        "400":
+        '400':
           description: Invalid request
           content:
             application/json:
@@ -721,7 +725,7 @@ paths:
                     default: false
                   message:
                     type: string
-        "401":
+        '401':
           description: The password cannot be the same as the old one
           content:
             application/json:
@@ -734,7 +738,7 @@ paths:
                   message:
                     type: string
                     example: The password cannot be the same as the old one
-        "404":
+        '404':
           description: Token not found
           content:
             application/json:
@@ -747,3 +751,31 @@ paths:
                   message:
                     type: string
                     example: Token not found
+  /content-format:
+    get:
+      tags:
+        - Content
+      summary: Retrieve content-format enum
+      responses:
+        '200':
+          description: Get content-formats with success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: true
+                  data:
+                    type: object
+                    properties:
+                      BLOG:
+                        type: string
+                        default: blog
+                      SOCIAL:
+                        type: string
+                        default: social
+                      EMAIL:
+                        type: string
+                        default: email
